--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,9 @@ body{
 	position : relative;
 	padding-bottom : 140px;
 }
-
+header {
+margin-top : 60px;
+}
 article a {
 	color : #653451;
 }
@@ -706,6 +708,7 @@ text-align : justify;
 
 #enbref {
 	padding : 0px 10px 10px 10px ;
+	margin-top : 10px;
 }
 #enbref1 {
  	width : 42%;
