--- a/css/style_small.css
+++ b/css/style_small.css
@@ -388,6 +388,7 @@ article h1 {
 	margin : 0 20px 0 20px;
 	display : inline-block;
 	text-align : center;
+	margin-top : 10px;
 }
 #enbref1 {
 	float : float; 
